# ellog

./: CMakeLists.txt  README.md  config.conf  easylogging++.h  ellog.cpp  ellog.h  ellog.pro  ellog.sln  ellog.vcxproj  main.cpp  platform.h
test/: CMakeLists.txt  testellog.cpp  testellog.vcxproj
testroll/: CMakeLists.txt  Stream.cpp  Stream.h  main.cpp  testroll.vcxproj
